syntax = "proto3";

package envoy.data.core.v2alpha;

option java_outer_classname = "LocalReplyBodyProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.data.core.v2alpha";

// [#protodoc-title:  core data]

// Wrapper for local reply body data.
message LocalReplyBody {
  string body = 3;
}
